--- a/vida/jade/index.jade
+++ b/vida/jade/index.jade
@@ -14,7 +14,82 @@ html(lang="en")
 	body
 		.callme
 			br
-			p.text-center Tengo dudas, Llámenme
+			p.text-center(data-toggle='modal', data-target='#myModal2', data-trigger='hover') Tengo dudas, Llámenme
+		
+			// Modal
+		#myModal2.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel')
+			.modal-dialog(role='document')
+				.modal-content
+					//.modal-header
+						button.close(type='button', data-dismiss='modal', aria-label='Close')
+							span(aria-hidden='true') ×
+					.modal-body
+						.col-md-offset-1.col-md-10
+							button.close(type='button', data-dismiss='modal', aria-label='Close')
+								span.cerrar(aria-hidden='true')
+							.col-md-12
+								h4 Apoyo vía telefónica.
+								h2 Te solicitamos que ingreses tu número telefónico y un horario adecuado para contactarte.
+							.col-md-12
+								p.labelgral ¿Cual es tu nombre?
+								input#contrata.form-control(type='text' placeholder='Ingresa tu nombre')
+	
+							.col-md-3.telefono
+							.col-md-9
+								.col-md-4
+									p.labelgral Lada*
+									input#contrata.form-control(type='text' placeholder='lada')
+								.col-md-8
+									p.labelgral Teléfono *
+									input#contrata.form-control(type='text' placeholder='98-98-98')
+							.col-md-3.reloj
+							.col-md-8
+								p.labelgral Horario a contactar*
+								.col-md-6
+									h6 A partir de las:
+									select#contrata.form-control
+											option(value="opcion-1",nombre="") 11:30
+											option(value="opcion-2",nombre="") 12:00
+											option(value="opcion-3",nombre="") 12:30
+											option(value="opcion-4",nombre="") 13:00
+											option(value="opcion-5",nombre="") 14:00
+								.col-md-6
+									h6 Hasta las:
+									select#contrata.form-control
+											option(value="opcion-1",nombre="") 11:30
+											option(value="opcion-2",nombre="") 12:00
+											option(value="opcion-3",nombre="") 12:30
+											option(value="opcion-4",nombre="") 13:00
+											option(value="opcion-5",nombre="") 14:00
+											option(value="opcion-6",nombre="") 14:30
+											option(value="opcion-7",nombre="") 15:00
+											option(value="opcion-8",nombre="") 15:30
+											option(value="opcion-9",nombre="") 16:00
+							.col-md-12
+								br
+						.text-center		
+							button.btn-lg.btn-solid(type='button', data-dismiss='modal',data-toggle='modal', data-target='#myModalDmc', data-trigger='hover') CONTACTARME
+
+			// Modal
+		#myModalDmc.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel')
+			.modal-dialog.modal-lg(role='document')
+				.modal-content
+					//.modal-header
+						button.close(type='button', data-dismiss='modal', aria-label='Close')
+							span(aria-hidden='true') ×
+						h4#myModalLabel.modal-title Modal title
+					.modal-body.text-center
+						.row.text-left
+							.col-md-2.text-right
+								br
+								input(type="checkbox",id="checkbox-modal" class="regular-checkbox big-checkbox", checked="true")
+								label(for="checkbox-1")
+							.col-md-10
+								br
+								h4 Tu solicitud se ha generado correctamente, en breve nos pondremos en contacto contigo en el horario seleccionado.
+								br
+						button.btn-lg.btn-solid(type='button', data-dismiss='modal') Aceptar
+
 		hr
 		h1 pasos
 		.steps
@@ -53,9 +128,8 @@ html(lang="en")
 								span 
 									strong leas y aceptes    
 								| el Aviso de Privacidad que tenemos para el manejo de tus datos personales, y posteriormente te solicitamos completar los siguientes datos:
-							input(type="checkbox",id="checkbox-1" class="regular-checkbox big-checkbox")
-							label(for="checkbox-1")
-							a#AvPriv(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalAvPriv', data-trigger='hover') Aviso de Privacidad
+							label Consulta el 
+							a#AvPriv(target='_BLANK',href='#', data-toggle='modal', data-target='#myModalAvPriv', data-trigger='hover')  Aviso de Privacidad
 						.col-md-12
 							.col-md-11.text-left
 								h6 He leído y conozco el alcance del tratamiento de mis datos personales.
@@ -126,7 +200,7 @@ html(lang="en")
 								a(target="_BLANK",href="https://www.segurosbancomer.com.mx/seguros/tleu/segurosban/index.jsp") www.segurosbancomer.com.mx
 							br
 						.text-center
-								button.btn-lg.btn-solid.text-center(type='button', data-dismiss='modal') Aceptar
+								button.btn-lg.btn-solid.text-center.desbl(type='button', data-dismiss='modal') Aceptar
 	
 		hr
 		h1 cotiza
@@ -361,30 +435,7 @@ html(lang="en")
 					.col-md-6.text-left
 						button.btn-lg.btn-solid CONTINUAR
 				.space
-			// Modal
-		#myModalDmc.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel')
-			.modal-dialog.modal-lg(role='document')
-				.modal-content
-					//.modal-header
-						button.close(type='button', data-dismiss='modal', aria-label='Close')
-							span(aria-hidden='true') ×
-						h4#myModalLabel.modal-title Modal title
-					.modal-body.text-center
-						.row.text-left
-							.col-md-2.text-right
-								input(type="checkbox",id="checkbox-modal" class="regular-checkbox big-checkbox", checked="true")
-								label(for="checkbox-1")
-							.col-md-6
-								h2 ¡Felicidades!
-						br
-						h4 Tu cotización se ha realizado de manera correcta con el folio 
-							strong 123456789A
-							, el cual te recomendamos conserves para futuras consultas
-						br
-						button.btn-lg.btn-solid(type='button', data-dismiss='modal') Aceptar
-					//.modal-footer
-						button.btn.btn-default(type='button', data-dismiss='modal') Close
-						button.btn.btn-primary(type='button') Save changes
+
 		hr
 		h1 contrata
 		.container
@@ -588,32 +639,7 @@ html(lang="en")
 						.col-md-offset-1.col-md-10.text-center
 							br
 							button#continuarStep4.btn-lg.btn-solid CONTINUAR
-							.space				
-			// Modal
-		#myModal2.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel')
-			.modal-dialog(role='document')
-				.modal-content
-					//.modal-header
-						button.close(type='button', data-dismiss='modal', aria-label='Close')
-							span(aria-hidden='true') ×
-						h4#myModalLabel.modal-title Modal title
-					.modal-body.text-center
-						h4 Te solicitamos que ingreses tu número telefonico y un horario adecuado para contactarte
-						.col-md-12.text-center
-							.col-md-3
-							.col-md-5
-								p.labelgral Número telefonico
-								input#contrata.form-control(type='text' placeholder='55-98-98-98')
-						.col-md-12.text-center
-							.col-md-3
-							.col-md-5
-								p.labelgral Horario a contactar
-								input#contrata.form-control(type='text' placeholder='12:00-16:00')						
-						button.btn-lg CONTACTARME
-					//.modal-footer
-						button.btn.btn-default(type='button', data-dismiss='modal') Close
-						button.btn.btn-primary(type='button') Save changes
-
+							.space
 		.container
 			.row
 				h2 PAGO DE CONTRATACIÓN
