--- a/vida/sass/style.scss
+++ b/vida/sass/style.scss
@@ -924,7 +924,7 @@ ul.list-group{
 		right: 486px;
 		} 
 }
-#myModalDmc .modal-body {
+#myModalDmc .modal-body,#myModalDmcNo .modal-body {
     border: 4px solid $verde;
     .regular-checkbox + label {
     background-color: #fff;
