--- a/vida/sass/style.scss
+++ b/vida/sass/style.scss
@@ -315,6 +315,11 @@ input, select, textarea {
 	    margin-top: -47px;
 	    background-position: center;
 		}
+	.datos{
+		font-family: StagSans-Light;
+		font-size: 16px;
+		color: #6C6F73;
+	}
 }
 .bgazul1{
 	background-color: $azul2;
